# Kalibr

./: LICENSE.sublime-workspace
aslam_cv/aslam_cameras/: CMakeLists.txt
aslam_cv/aslam_cameras/include/aslam/cameras/: CameraGeometry.hpp  GridCalibrationTargetBase.hpp  GridCalibrationTargetCheckerboard.hpp  GridDetector.hpp
aslam_cv/aslam_cameras/include/aslam/cameras/implementation/: CameraGeometry.hpp  PinholeProjection.hpp
aslam_cv/aslam_cameras/src/: EquidistantDistortion.cpp  GridCalibrationTargetCheckerboard.cpp  GridCalibrationTargetCirclegrid.cpp  GridCalibrationTargetObservation.cpp  GridDetector.cpp  OmniCameraGeometry.cpp  PinholeCameraGeometry.cpp
aslam_cv/aslam_cameras_april/: CMakeLists.txt  package.xml
aslam_cv/aslam_cameras_april/include/aslam/cameras/: GridCalibrationTargetAprilgrid.hpp
aslam_cv/aslam_cameras_april/src/: GridCalibrationTargetAprilgrid.cpp
aslam_cv/aslam_cv_error_terms/include/aslam/backend/implementation/: BSplineMotionError.hpp  CovarianceReprojectionError.hpp  ReprojectionError.hpp  SimpleReprojectionError.hpp
aslam_cv/aslam_cv_python/src/: CameraGeometry.cpp  GridCalibration.cpp
aslam_offline_calibration/ethz_apriltag2/: CMakeLists.txt  package.xml
aslam_offline_calibration/ethz_apriltag2/include/apriltags/: Tag25h4.h  TagDetector.h
aslam_offline_calibration/ethz_apriltag2/src/: TagDetection.cc  TagDetector.cc  TagFamily.cc
aslam_offline_calibration/kalibr/: CMakeLists.txt  package.xml
aslam_offline_calibration/kalibr/python/: kalibr_calibrate_cameras  kalibr_camera_validator
aslam_offline_calibration/kalibr/python/kalibr_camera_calibration/: CameraCalibrator.py  CameraIntializers.py
aslam_offline_calibration/kalibr/python/kalibr_common/: ConfigReader.py  TargetExtractor.py
aslam_optimizer/aslam_backend/include/aslam/backend/implementation/: Cholmod.hpp
aslam_optimizer/aslam_backend/src/: ErrorTerm.cpp  LinearSystemSolver.cpp  MEstimatorPolicies.cpp  Optimizer2.cpp  SparseCholeskyLinearSystemSolver.cpp
aslam_optimizer/aslam_backend_expressions/src/: ErrorTermEuclidean.cpp  ErrorTermTransformation.cpp  HomogeneousPoint.cpp
aslam_optimizer/aslam_backend_python/python/aslam_backend/: numpy_eigen  sm
debian/: libalvar-dev_2.0-1_amd64.deb  libalvar-dev_2.0-1_armhf.deb  libalvar2_2.0-1_amd64.deb  libalvar2_2.0-1_armhf.deb  libalvar_2.0-1.debian.tar.xz
