<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>ethz_apriltag2</name>
  <description>ethz_apriltag2</description>
  <version>0.0.1</version>
  <maintainer email="paulfurgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>eigen2</build_depend>
  <build_depend>sm_common</build_depend>
  <build_depend>sm_eigen</build_depend>
  <build_depend>sm_boost</build_depend>
  <build_depend>sm_kinematics</build_depend>
  <build_depend>sm_logging</build_depend>
</package>
